WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
54793
REGRESSION (
r73369
-
r73405
): transform animation interpolates incorrectly
https://bugs.webkit.org/show_bug.cgi?id=54793
Summary
REGRESSION (r73369-r73405): transform animation interpolates incorrectly
Simon Fraser (smfr)
Reported
2011-02-18 21:05:09 PST
Something around
r73380
broke some kinds of transform animation.
Attachments
Testcase
(1.57 KB, text/html)
2011-02-18 21:05 PST
,
Simon Fraser (smfr)
no flags
Details
Patch
(18.73 KB, patch)
2011-02-18 21:47 PST
,
Simon Fraser (smfr)
krit
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2011-02-18 21:05:28 PST
<
rdar://problem/9026717
>
Simon Fraser (smfr)
Comment 2
2011-02-18 21:05:45 PST
Created
attachment 83054
[details]
Testcase
Simon Fraser (smfr)
Comment 3
2011-02-18 21:22:34 PST
This does not affect scale/scale3d/translate/translate3d.
Simon Fraser (smfr)
Comment 4
2011-02-18 21:47:44 PST
Created
attachment 83055
[details]
Patch
Dirk Schulze
Comment 5
2011-02-18 22:29:40 PST
Comment on
attachment 83055
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=83055&action=review
r=me. Please fix the comment in the test.
> LayoutTests/animations/3d/matrix-transform-type-animation.html:38 > + // [time, element-id, property, expected-value, tolerance] > + ["anim", 1, "box", "webkitTransform.4", 50, 2],
something looks wrong on the comment above. :-)
Simon Fraser (smfr)
Comment 6
2011-02-20 19:26:59 PST
http://trac.webkit.org/changeset/79168
WebKit Review Bot
Comment 7
2011-02-21 22:28:37 PST
http://trac.webkit.org/changeset/79168
might have broken GTK Linux 32-bit Debug
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug